[package]
name = "fm-cli"
version = "0.1.0"
edition = "2021"
description = "cross-platform Rust command-line tool for managing directories"
license = "MIT"
repository = "https://github.com/gteditor99/fm"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
